--- a/Index.html
+++ b/Index.html
@@ -43,9 +43,11 @@
                     <input type="text" class="form-control" id="origin" placeholder="Origin" style="width: 150px;">
                 </div>
                 <div class="form-group">
+                    <label for="start-date">Start Date: </label>
                     <input type="date" class="form-control" id="start-date">
                 </div>
                 <div class="form-group">
+                    <label for="start-date">End Date: </label>
                     <input type="date" class="form-control" id="end-date">
                 </div>
                 <button type="button" class="btn btn-success" id="SearchSubmit">Search</button>
