--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
-<html>
+<!--Edited-->
+<html lang="en">
   <head>
     <base href="/">
     <title>New Project</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0,target-densitydpi=device-dpi, user-scalable=no" >
     <link rel="shortcut icon">
 	<!-- TODO: Move these to vendor.ts -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
